Added "IN" operator to all AssetIndex imlementations (#322)
* added verification/tests for the cosmos asset index

* added tests for the cosmos asset index

* fixed Predicate Converter Test

Co-authored-by: Paul Latzelsperger <paul.latzelsperger@beardyinc.com>